src/snapshots/bminor__parser__test__declaration_statement-40.snap
---
source: src/parser.rs
expression: "parse_statement(\"fn: function boolean (a: integer) = {}\")"
---
Ok(
    FunctionDeclaration {
        name: Token {
            kind: Identifier,
            lexeme: "fn",
            line: 0,
        },
        return_kind: Token {
            kind: Boolean,
            lexeme: "boolean",
            line: 0,
        },
        params: [
            Param {
                name: Token {
                    kind: Identifier,
                    lexeme: "a",
                    line: 0,
                },
                kind: Atomic {
                    kind: Token {
                        kind: Integer,
                        lexeme: "integer",
                        line: 0,
                    },
                },
            },
        ],
        body: Block {
            statements: [],
        },
    },
)
