src/snapshots/bminor__parser__test__declaration_statement-41.snap
---
source: src/parser.rs
expression: "parse_statement(\"fn: function boolean (a: integer, b: string, c: char, d: array [] integer, e: boolean, f: map string string) = {}\")"
---
Ok(
    FunctionDeclaration {
        name: Token {
            kind: Identifier,
            lexeme: "fn",
            line: 0,
        },
        return_kind: Token {
            kind: Boolean,
            lexeme: "boolean",
            line: 0,
        },
        params: [
            Param {
                name: Token {
                    kind: Identifier,
                    lexeme: "a",
                    line: 0,
                },
                kind: Atomic {
                    kind: Integer,
                },
            },
            Param {
                name: Token {
                    kind: Identifier,
                    lexeme: "b",
                    line: 0,
                },
                kind: Atomic {
                    kind: String,
                },
            },
            Param {
                name: Token {
                    kind: Identifier,
                    lexeme: "c",
                    line: 0,
                },
                kind: Atomic {
                    kind: Char,
                },
            },
            Param {
                name: Token {
                    kind: Identifier,
                    lexeme: "d",
                    line: 0,
                },
                kind: Array {
                    kind: Integer,
                },
            },
            Param {
                name: Token {
                    kind: Identifier,
                    lexeme: "e",
                    line: 0,
                },
                kind: Atomic {
                    kind: Boolean,
                },
            },
            Param {
                name: Token {
                    kind: Identifier,
                    lexeme: "f",
                    line: 0,
                },
                kind: Map {
                    key_kind: String,
                    value_kind: String,
                },
            },
        ],
        body: Block {
            statements: [],
        },
    },
)
