src/snapshots/bminor__parser__test__exponent_expression.snap
---
source: src/parser.rs
expression: "parse_expression(\"-1 ^ x++\")"
---
Ok(
    Exponent {
        base: Unary {
            operator: Token {
                kind: Minus,
                lexeme: "-",
                line: 0,
            },
            value: Literal {
                value: Token {
                    kind: IntegerLiteral,
                    lexeme: "1",
                    line: 0,
                },
                kind: Integer,
            },
        },
        power: Unary {
            operator: Token {
                kind: PlusPlus,
                lexeme: "++",
                line: 0,
            },
            value: Variable {
                name: Token {
                    kind: Identifier,
                    lexeme: "x",
                    line: 0,
                },
            },
        },
    },
)
