src/snapshots/bminor__parser__test__expression_statement-9.snap
---
source: src/parser.rs
expression: "parse_statement(\"x = fn();\")"
---
Ok(
    Expression {
        expression: Assignment {
            target: Token {
                kind: Identifier,
                lexeme: "x",
                line: 0,
            },
            value: Call {
                name: Token {
                    kind: Identifier,
                    lexeme: "fn",
                    line: 0,
                },
                args: [],
            },
        },
    },
)
